--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body 				 { background:url(https://scotch.io/wp-content/uploads/2014/07/61.jpg);
   padding:5% 7% 7% 5%;
   box-shadow: 0 4px 8px 0 rgb(163, 163, 163);
   border-radius: 20px;
+  font-size: 2%;
   
 }
 h2 		 { 
